# Prosjektoppgave

FloodsimGPU_espen_ntnu/: .hg_archival.txt  .hgignore  CMakeLists.txt  Doxyfile  README  doc.h
FloodsimGPU_espen_ntnu/KPSimulator/: CMakeLists.txt
FloodsimGPU_espen_ntnu/KPSimulator/include/: KPBoundaryConditions.h  KPException.hpp  KPInitialConditions.h  KPSimulator.h  gpu_ptr.hpp  gpu_raw_ptr.hpp
FloodsimGPU_espen_ntnu/KPSimulator/src/: KPInitialConditions.cpp  KPSimulator.cu  KPSimulatorBC.cu
FloodsimGPU_espen_ntnu/KPSimulator/src/include/: KPSimulatorHelpers.hpp  KPSimulatorImpl.h  KPTypes.h  configure.h.in
FloodsimGPU_espen_ntnu/KPSimulator/src/include/cuda/: util.h
FloodsimGPU_espen_ntnu/KPSimulator/src/include/cuda/kernel/: BC.hpp  BCFixedDepth.hpp  BCFixedDischarge.hpp  BCOpen.hpp  BCWall.hpp  Dt.hpp  FGH.hpp  InitBm.hpp  InitU.hpp  RK.hpp
FloodsimGPU_espen_ntnu/KPSimulatorApps/: CMakeLists.txt
FloodsimGPU_espen_ntnu/KPSimulatorApps/include/: CommandLineManager.h  DataManager.h  FileManager.h  InitialConditionsManager.h  KPNetCDFFile.h  KPSimWrapper.h  SWVisualizationContext.h  configure.h.in  datatypes.h  util.hpp
FloodsimGPU_espen_ntnu/KPSimulatorApps/include/app/: common.hpp  common_visualization.hpp  data_generation.hpp
FloodsimGPU_espen_ntnu/KPSimulatorApps/src/: CommandLineManager.cpp  DataManager.cpp  FileManager.cpp  InitialConditionsManager.cpp  KPNetCDFFile.cpp  SWVisualizationContext.cpp
FloodsimGPU_espen_ntnu/KPSimulatorApps/src/app/: demtoppm.cpp  fixMalpasset.cpp  kp.cpp  kp_profiling.cpp  kp_stats.cpp  kp_visualization.cpp  nc_crossection.cpp  nc_visualization.cpp  ppmtodem.cpp  waterDepthToElevation.cpp
FloodsimGPU_espen_ntnu/SWVis/: CMakeLists.txt
FloodsimGPU_espen_ntnu/SWVis/data/env/: skybox_down.ppm  skybox_east.ppm  skybox_north.ppm  skybox_south.ppm  skybox_up.ppm  skybox_west.ppm
FloodsimGPU_espen_ntnu/SWVis/data/glsl/: Landscape_fragment.glsl  Landscape_vertex.glsl  Water_depth_fragment.glsl  Water_depth_vertex.glsl  Water_fresnel_fragment.glsl  Water_fresnel_vertex.glsl  Water_velocity_fragment.glsl  Water_velocity_vertex.glsl
FloodsimGPU_espen_ntnu/SWVis/include/: CameraTransform.h  GLFuncs.h  PNMImage.hpp  Renderer.h  ScreenshotCreator.h
FloodsimGPU_espen_ntnu/SWVis/include/siut/gl_utils/: GLSLtools.hpp
FloodsimGPU_espen_ntnu/SWVis/include/siut/io_utils/: snarf.hpp
FloodsimGPU_espen_ntnu/SWVis/src/: CameraTransform.cpp  GLFuncs.cpp  Renderer.cpp  ScreenshotCreator.cpp
FloodsimGPU_espen_ntnu/SWVis/src/app/: glslToH.cpp  ppmToH.cpp
FloodsimGPU_espen_ntnu/SWVis/src/glsl/: Shaders.h
FloodsimGPU_espen_ntnu/SWVis/src/skybox/: skybox.h
FloodsimGPU_espen_ntnu/cmake/Modules/: FindGLEW.cmake  FindMercurial.cmake
